--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: bash
 services: docker
 
 notifications:
-  email: false
+  email:
+    on_success: never
+    on_failure: always
 
 env:
   - DOCKER_COMPOSE_VERSION=1.15.0
