--- a/ubuntu-cloud9/nginx/cloud.conf
+++ b/ubuntu-cloud9/nginx/cloud.conf
@@ -24,8 +24,8 @@ server {
     ssl_stapling_verify                 on;
     resolver                            8.8.8.8 8.8.4.4;
 
-    ssl_certificate                     /data/certs/cert.crt;
-    ssl_certificate_key                 /data/certs/priv.key;
+    ssl_certificate                     /data/certs/fullchain.pem;
+    ssl_certificate_key                 /data/certs/privkey.pem;
 
     access_log                          /dev/stdout;
     error_log                           /dev/stderr info;
