--- a/ubuntu-c9sdk/nginx/cloud.conf
+++ b/ubuntu-c9sdk/nginx/cloud.conf
@@ -31,7 +31,9 @@ server {
     error_log                           /dev/stderr info;
 
     location / {
-        proxy_pass                          http://docker-web;
-        proxy_read_timeout                  900;
+        proxy_pass                      http://docker-web;
+        proxy_read_timeout              900;
+
+        auth_basic_user_file            /etc/nginx/conf.d/auth;
     }
 }
