--- a/ubuntu-c9sdk/nginx/cloud.conf
+++ b/ubuntu-c9sdk/nginx/cloud.conf
@@ -34,6 +34,7 @@ server {
         proxy_pass                      http://docker-web;
         proxy_read_timeout              900;
 
+        auth_basic                      "Restricted Content";
         auth_basic_user_file            /etc/nginx/conf.d/auth;
     }
 }
